--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,16 @@
 
     <!-- CONTENT -->
     <main class="content">
-        <div class="section">
+		<section class="section">
+			<div class="container"></div>
+		</section>
+        <!--<div class="section">
             <div class="container">
                 <h2>Section Slider</h2>
 
                 <div class="main-slider swiper-container">
                     <div class="swiper-wrapper">
-                        <!-- Slides -->
+                       
                         <div class="swiper-slide">
                             <picture>
                                 <img src="<%= require('./img/default.svg') %>" data-src="<%= require('./img/placeholder-img.jpg') %>" alt="example" title="example">
@@ -62,10 +65,10 @@
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
 
-                    <!--<div class="swiper-scrollbar"></div>-->
+                   
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <div class="section">
             <div class="container">
@@ -80,22 +83,7 @@
             </div>
         </div>
 
-        <div class="section">
-            <div class="container">
-                <h2>Section Range slider</h2>
-
-                <div class="slider-range"><input type="range" value="75" min="1" max="100"></div>
-                <div class="slider-range"><input type="range" value="275" max="1000"></div>
-                <div class="slider-range"><input type="range"></div>
-
-                <br>
-
-                <div class="slider-handles"><input type="range" min="2000" max="10000"></div>
-                <div class="slider-handles"><input type="range" max="1000"></div>
-                <div class="slider-handles"><input type="range"></div>
-            </div>
-        </div>
-    </main>
+           </main>
     <!-- CONTENT END -->
 
     <!-- FOOTER -->
