--- a/src/index.html
+++ b/src/index.html
@@ -103,21 +103,22 @@
 
 			<section class="section">
 				<div class="title__container">
-					<div class="title__item"></div>
 					<h2>ЧОМУ ЖІНКИ ОБИРАЮТЬ DALLAS</h2>
-					<div class="title__item"></div>
-						<div class="conteiner">
+				</div>
+					<div class="title__column">
+						<div class="conteiner-fluid">
 							<div class="row">
-								<div class="col-4 justify-content-center" >
+								<div class="col-4 " >
 									<h3>доступна ціна</h3>
-									<p>Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на мільйон. Шампунь + маска = і ось ти вже готова до будь-яких викликів життя!</p>
+									<p class="text-center">Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на мільйон. Шампунь + маска = і ось ти вже готова до будь-яких викликів життя!</p>
 								</div>
-								<div class="col-4 justify-content-center">
+								<div class="col-4">
 									<h3>доступна ціна</h3>
-									<p>Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на мільйон. Шампунь + маска = і ось ти вже готова до будь-яких викликів життя!</p>
+									<p class="text-center">Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на мільйон. Шампунь + маска = і ось ти вже готова до будь-яких викликів життя!</p>
 								</div>
-								<div class="col-4 justify-content-center"><h3>доступна ціна</h3>
-									<p>Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на мільйон. Шампунь + маска = і ось ти вже готова до будь-яких викликів життя!</p></div>
+								<div class="col-4">
+									<h3>доступна ціна</h3>
+									<p class="text-center">Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на мільйон. Шампунь + маска = і ось ти вже готова до будь-яких викликів життя!</p></div>
 							</div>
 						</div>
 				</div>
