--- a/src/index.html
+++ b/src/index.html
@@ -52,12 +52,11 @@
 					<div class="main-slider swiper-container">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide first-slide">
-								<!-- before -->
 								<picture>
 									<img src="<%= require('./img/default.svg') %>"
 										data-src="<%= require('./img/log-dalas-gold.png') %>" alt="example" title="example">
 								</picture>
-								<h1>Тут може бути слоган</h1>
+								<p class="title">Тут може бути слоган</p>
 								<p>Виглядай SUPER за будь-яких умов та де завгодно!</p>
 							</div>
 							<div class="swiper-slide second-slide">
@@ -65,29 +64,24 @@
 									<img src="<%= require('./img/default.svg') %>"
 										data-src="<%= require('./img/logo-red_bottle.png') %>" alt="example" title="example">
 								</picture>
-								<h1>Тут може бути слоган</h1>
+								<p class="title">Тут може бути слоган</p>
 								<p>Виглядай SUPER за будь-яких умов та де завгодно!</p>
 							</div>
-
-							<div class="swiper-slide">
+							<div class="swiper-slide first-slide">
 								<picture>
-									<img src="<%= require('./img/default.svg') %>"
-										data-src="<%= require('./img/placeholder-img.jpg') %>" alt="example" title="example">
+									<img src="<%= require('./img/default.svg') %>" data-src="<%= require('./img/log-dalas-gold.png') %>" alt="example"
+										title="example">
 								</picture>
+								<p class="title">Тут може бути слоган</p>
+								<p>Виглядай SUPER за будь-яких умов та де завгодно!</p>
 							</div>
-
-							<div class="swiper-slide">
+							<div class="swiper-slide second-slide">
 								<picture>
-									<img src="<%= require('./img/default.svg') %>"
-										data-src="<%= require('./img/placeholder-img.jpg') %>" alt="example" title="example">
+									<img src="<%= require('./img/default.svg') %>" data-src="<%= require('./img/logo-red_bottle.png') %>"
+										alt="example" title="example">
 								</picture>
-							</div>
-
-							<div class="swiper-slide">
-								<picture>
-									<img src="<%= require('./img/default.svg') %>"
-										data-src="<%= require('./img/placeholder-img.jpg') %>" alt="example" title="example">
-								</picture>
+								<p class="title">Тут може бути слоган</p>
+								<p>Виглядай SUPER за будь-яких умов та де завгодно!</p>
 							</div>
 						</div>
 
@@ -106,7 +100,7 @@
 					<h2>ЧОМУ ЖІНКИ ОБИРАЮТЬ DALLAS</h2>
 				</div>
 					<div class="title__column">
-						<div class="conteiner-fluid">
+						<div class="conteiner">
 							<div class="row">
 								<div class="col-4 " >
 									<h3>доступна ціна</h3>
