--- a/src/index.html
+++ b/src/index.html
@@ -99,23 +99,34 @@
 				<div class="title__container">
 					<h2>ЧОМУ ЖІНКИ ОБИРАЮТЬ DALLAS</h2>
 				</div>
-					<div class="title__column">
+				<div class="title__column">
 						<div class="conteiner">
 							<div class="row">
 								<div class="col-4 " >
-									<h3>доступна ціна</h3>
+									<h3>Доступна ціна</h3>
 									<p class="text-center">Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на мільйон. Шампунь + маска = і ось ти вже готова до будь-яких викликів життя!</p>
 								</div>
 								<div class="col-4">
-									<h3>доступна ціна</h3>
-									<p class="text-center">Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на мільйон. Шампунь + маска = і ось ти вже готова до будь-яких викликів життя!</p>
+									<h3>Німецька якість</h3>
+									<p class="text-center">Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на мільйон. Шампунь +
+									маска = і ось ти вже готова до будь-яких викликів життя!</p>
 								</div>
 								<div class="col-4">
-									<h3>доступна ціна</h3>
+									<h3>Широкий асортимент</h3>
 									<p class="text-center">Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на мільйон. Шампунь + маска = і ось ти вже готова до будь-яких викликів життя!</p></div>
 							</div>
 						</div>
 				</div>
+			</section>
+			<section class="section">
+					<div class="video__wrapper">
+						<div class="video__item">
+								<h3>Dallas cosmetics</h3>
+								<p>Щоб на зустрічі з подружками чути сотні компліментів. Щоб навіть сидячи вдома, відчувати себе на
+									мільйон. Шампунь +
+									маска = і ось ти вже готова до будь-яких викликів життя!</p>
+						</div>
+				  	</div>	
 			</section>
 		</main>
 		<!-- CONTENT END -->
